adding portfolio index page

--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -18,6 +18,7 @@
       <div class="keyBox">
         <p data-key="65">
           A
+          <br />
           <span class="sound">clap</span>
         </p>
       </div>
@@ -25,6 +26,7 @@
       <div class="keyBox">
         <p data-key="83">
           S
+          <br />
           <span class="sound">boom</span>
         </p>
       </div>
@@ -32,49 +34,56 @@
       <div class="keyBox">
         <p data-key="68">
           D
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">hihat</span>
         </p>
       </div>
 
       <div class="keyBox">
         <p data-key="70">
           F
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">kick</span>
         </p>
       </div>
 
       <div class="keyBox">
         <p data-key="71">
           G
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">openhat</span>
         </p>
       </div>
 
       <div class="keyBox">
         <p data-key="72">
           H
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">ride</span>
         </p>
       </div>
 
       <div class="keyBox">
         <p data-key="74">
           J
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">snare</span>
         </p>
       </div>
 
       <div class="keyBox">
         <p data-key="75">
           K
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">tink</span>
         </p>
       </div>
 
       <div class="keyBox">
         <p data-key="76">
           L
-          <span class="sound">boom</span>
+          <br />
+          <span class="sound">tom</span>
         </p>
       </div>
     </div>
@@ -88,6 +97,8 @@
     <audio data-key="74" src="sounds/snare.wav"></audio>
     <audio data-key="75" src="sounds/tink.wav"></audio>
     <audio data-key="76" src="sounds/tom.wav"></audio>
+
+    <a href="/index.html">Back</a>
   </body>
 
   <script src="src.js"></script>
