--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h3>Day 1 : Drum Kit</h3>
         <p>Play Sounds by pressing keys on the Keyboard!</p>
         <br />
-        💻<a href="/Day-1/index.html">See Live</a> 👩‍💻
+        💻<a href="./Day-1/index.html">See Live</a> 👩‍💻
         <a href="https://github.com/Monika5S/JS30/tree/main/Day-1"
           >Source Code</a
         >
