--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -98,7 +98,7 @@
     <audio data-key="75" src="sounds/tink.wav"></audio>
     <audio data-key="76" src="sounds/tom.wav"></audio>
 
-    <a href="/index.html">Back</a>
+    <a href="JS30/index.html">Back</a>
   </body>
 
   <script src="src.js"></script>
