day-2-clock: tranform to rotate hands of clock, date for sync to current time

--- a/index.html
+++ b/index.html
@@ -68,5 +68,20 @@
         >
       </div>
     </div>
+
+    <div class="challenges">
+      <div class="challenge-img">
+        <img src="media/d2.png" alt="clock project image" />
+      </div>
+      <div class="challenge-info">
+        <h3>Day 2 : Clock</h3>
+        <p>Could you tell me what time it is?</p>
+        <br />
+        💻<a href="/JS30/Day-2/index.html">See Live</a> 👩‍💻
+        <a href="https://github.com/Monika5S/JS30/tree/main/Day-2">
+          Source Code
+        </a>
+      </div>
+    </div>
   </body>
 </html>
