resolved portfolio page img spacing and back button

--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -8,7 +8,8 @@
   </head>
 
   <body>
-    <a href="JS30/index.html">Back</a>
+    <a href="./">Back</a>
+
     <div class="clock-container">
       <div class="clock-rounded">
         <div class="hand hand-hour"></div>
