Day-3-Customizer: html,css variables and modifying them with js setproperty

--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <a href="./">Back</a>
+    <a href="../">Back</a>
 
     <div class="clock-container">
       <div class="clock-rounded">
