adding day-4 on homepage

--- a/Day-4/index.html
+++ b/Day-4/index.html
@@ -8,14 +8,28 @@
     <style>
       body {
         background-color: rgb(191, 255, 234);
+        padding: 100px 20px;
       }
+
       p {
         font-size: 20px;
         color: darkslategrey;
       }
+
+      a {
+        border: 2px solid lightcoral;
+        padding: 8px 15px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: coral;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+      }
     </style>
   </head>
   <body>
+    <a href="../">Back</a>
     <p><em>Array Cardio : practice array functions! Open Console</em></p>
 
     <ol>
