--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@
           </a>
         </div>
       </div>
+
+      <div class="challenges">
+        <div class="challenge-img">
+          <img src="media/d4.png" alt="array practice preview" />
+        </div>
+        <div class="challenge-info">
+          <h3>Day 4 : Array Cardio 🎯</h3>
+          <p>practice array functions!</p>
+          <br />
+          💻<a href="/JS30/Day-4/index.html">See Live</a> 👩‍💻
+          <a href="https://github.com/Monika5S/JS30/tree/main/Day-4">
+            Source Code
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
