day-5-gallery: animated using transition, translateY and toggle() in j,s gallery made using flex containers

--- a/index.html
+++ b/index.html
@@ -144,6 +144,21 @@
           </a>
         </div>
       </div>
+
+      <div class="challenges">
+        <div class="challenge-img">
+          <img src="media/d5.png" alt="Gallery preview" />
+        </div>
+        <div class="challenge-info">
+          <h3>Day 5 :Quote Gallery 🎞️</h3>
+          <p>Flex Panel Quote Gallery!</p>
+          <br />
+          💻<a href="/JS30/Day-5/index.html">See Live</a> 👩‍💻
+          <a href="https://github.com/Monika5S/JS30/tree/main/Day-5">
+            Source Code
+          </a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
