--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>30daysVanillaJS</title>
+    <title>daysOfVanillaJS</title>
 
     <style>
       html {
@@ -80,7 +80,7 @@
   <body>
     <div class="challenges-container">
       <h1>WWCode: Days Of Code Challenge</h1>
-      <h2>#30DaysofVanillaJavaScript</h2>
+      <h2>#DaysofVanillaJavaScript</h2>
 
       <div class="challenges">
         <div class="challenge-img">
